Fix positioning on mobile, web positioning remanining

--- a/src/common/components/profile-preview/index.scss
+++ b/src/common/components/profile-preview/index.scss
@@ -81,7 +81,7 @@
 
 .profile-parent {
   @media (max-width: $sm-break) {
-    background-color: rgb(0 0 0 / 61%);
+    background-color: rgb(0 0 0 / 85%);
     position: absolute;
     top: 0px;
     bottom: 0px;
